syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mcmouse88.grpccliendtrain";
option java_outer_classname = "GreeterProto";
option objc_class_prefix = "GRT";

package greeter;

// The greeting service definition
service Greeter {

  // Unary call
  rpc SayHello(HelloRequest) returns (HelloResponse) {}

  // Server streaming
  rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);

  // Client streaming
  rpc LotsOfRequests(stream HelloRequest) returns (HelloResponse);

  // Bi-directional streaming
  rpc BidirectionalHello(stream HelloRequest) returns (stream HelloResponse);
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}